--- a/client/src/pages/gig/Gig.scss
+++ b/client/src/pages/gig/Gig.scss
@@ -109,6 +109,7 @@
                 img {
                   height: 14px;
                   width: 14px;
+                  margin-right: 7px;
                 }
   
                 span {
