--- a/client/src/components/gigCard/GigCard.scss
+++ b/client/src/components/gigCard/GigCard.scss
@@ -41,6 +41,7 @@
             img{
                 width: 14px;
                 height: 14px;
+                // margin-right: 14px;
             }
 
             span{
