--- a/client/src/pages/reviews/Reviews.scss
+++ b/client/src/pages/reviews/Reviews.scss
@@ -12,23 +12,30 @@
         flex-direction: column;
         gap: 20px;
   
-        input {
-          padding: 20px;
+        textarea {
+          padding: 14px;
         }
-  
-        select {
-          width: 200px;
-          padding: 20px;
-          align-self: flex-end;
-        }
-        button {
-          align-self: flex-end;
-          width: 100px;
-          border: none;
-          padding: 10px;
-          color: white;
-          background-color: #1dbf73;
-          cursor: pointer;
+
+        span{
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          
+          select {
+            width: 100px;
+            padding: 7px;
+            align-self: flex-end;
+          }
+          button {
+            align-self: flex-end;
+            width: 100px;
+            border: none;
+            padding: 10px;
+            color: white;
+            background-color: #1dbf73;
+            cursor: pointer;
+          }
         }
       }
     }
