--- a/client/src/pages/message/Message.scss
+++ b/client/src/pages/message/Message.scss
@@ -18,8 +18,8 @@
             display: flex;
             flex-direction: column;
             gap: 20px;
-            height: 500px;
-            overflow: scroll;
+            // height: 500px;
+            // overflow: scroll;
 
             .item{
                 display: flex;
