--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,23 @@
 *{
   padding: 0;
   margin: 0;
-  max-width: 100vw;
+  /* max-width: 100vw; */
   box-sizing: border-box;
   font-family: "Poppins",sans-serif;
+  /* background-color: rgb(1, 9, 19); */
 }
+/* 
+html{
+  height: -webkit-fill-available;
+} */
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+
 
 /* #root{
   padding: 0 21px;
