Adjusted some css

--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: center;
     color: #fff;
-    background-color: #0d084d;
+    // background-color: #0d084d;
+    background-color: #33026a;
     margin-top: 50px ;  
     width: 100%; 
     position: relative;
