--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    // background-color: #013914;
-    background-color: #0d084d;
+    background-color: #33026a;
+    // background-color: #0d084d;
     color: white;
     position: sticky;
     width: 100%;
@@ -13,7 +13,7 @@
   
     &.active {
       // background-color: #032432;
-      background-color: #0d084d;
+      background-color: #314f73;
       color: rgb(253, 248, 250);
 
       hr{
