--- a/client/src/pages/gigs/Gigs.scss
+++ b/client/src/pages/gigs/Gigs.scss
@@ -4,6 +4,7 @@
     .container{
         width: 100%;
         padding: 10px 40px;
+        min-height: 69vh;
         display: flex;
         flex-direction: column;
         gap: 14px;
