--- a/client/src/components/featured/Featured.scss
+++ b/client/src/components/featured/Featured.scss
@@ -3,7 +3,7 @@
     // height: 600px;
     display: flex;
     justify-content: center;
-    background-color: #013914;
+    background-color: #314f73;
     color: white;
 
     .container{
