--- a/client/src/pages/orders/Orders.scss
+++ b/client/src/pages/orders/Orders.scss
@@ -7,6 +7,7 @@
         width: 90%;
         margin: auto;
         padding: 50px 0;
+        min-height: 69vh;
 
         .title{
             display: flex;
