Updated nginx file and info

--- a/client/src/components/featured/Featured.scss
+++ b/client/src/components/featured/Featured.scss
@@ -3,7 +3,8 @@
     // height: 600px;
     display: flex;
     justify-content: center;
-    background-color: #314f73;
+    // background-color: #314f73;
+    background-color: #33026a;
     color: white;
 
     .container{
