--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -3,7 +3,8 @@
     justify-content: center;
     color: #fff;
     // background-color: #0d084d;
-    background-color: #33026a;
+    // background-color: #33026a;
+    background-color: #314f73;
     margin-top: 50px ;  
     width: 100%; 
     position: relative;
