--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -2,23 +2,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #314f73;
     // background-color: #0d084d;
+    background-color: #33026a;
     color: white;
     position: sticky;
     width: 100%;
     top: 0;
     z-index: 999;
     transition: 0.5s all ease;
-  
+    
     &.active {
-      background-color: #33026a;
+      background-color: #314f73;
       color: rgb(253, 248, 250);
 
       hr{
         // margin: 50px 0;
         height: 0;
-        border: 1px solid darkblue
+        border: 1px solid rgb(19, 86, 144)
     }
   
       button {
