--- a/client/src/pages/message/Message.scss
+++ b/client/src/pages/message/Message.scss
@@ -14,7 +14,7 @@
 
         .messages{
             margin: 30px 0px;
-            padding: 50px;
+            // padding: 50px;
             display: flex;
             flex-direction: column;
             gap: 20px;
