--- a/client/src/pages/myGigs/MyGigs.scss
+++ b/client/src/pages/myGigs/MyGigs.scss
@@ -5,7 +5,7 @@
     .container{
         width: 100%;
         padding: 50px 0;
-        min-height: 69vh;
+        // min-height: 69vh;
 
         .title{
             display: flex;
