--- a/client/src/pages/orders/Orders.scss
+++ b/client/src/pages/orders/Orders.scss
@@ -7,7 +7,7 @@
         width: 90%;
         margin: auto;
         padding: 50px 0;
-        min-height: 69vh;
+        // min-height: 69vh;
 
         .title{
             display: flex;
@@ -51,6 +51,12 @@
                     background-color: #1dbf730f;
                 }
             }
+        }
+        .ordeal{
+            text-align: center;
+            margin-top: 20%;
+            font-size: 38px;
+            color: #3d6990;
         }
     }
 }
