--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -7,3 +7,19 @@
         min-height: 100vh;
     }
 }
+
+.main{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    position: relative;
+
+    .out{
+        margin-bottom: 70px;
+    }
+    .bot{
+       bottom: 0;
+       position: absolute;
+       width: 100%; 
+    }
+}
