--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -18,7 +18,7 @@
       hr{
         // margin: 50px 0;
         height: 0;
-        border: 1px solid darkblue
+        border: 1px solid rgb(19, 86, 144);
     }
   
       button {
