--- a/client/src/pages/home/Home.scss
+++ b/client/src/pages/home/Home.scss
@@ -52,6 +52,7 @@
 
             #item2{
                 background-color: inherit;
+                font-size: 14px;
                 p{
                     color: #f1fdf7;
                 }
