Updated orders endpoint

--- a/client/src/pages/message/Message.scss
+++ b/client/src/pages/message/Message.scss
@@ -46,7 +46,7 @@
                 }
 
                 p{
-                    padding: 20px;
+                    padding: 11px 21px;
                     background-color: rgba(238,235,235);
                     border-radius: 0px 20px 20px 20px;
                     color: gray;
