Some css changes

--- a/client/src/components/gigCard/GigCard.scss
+++ b/client/src/components/gigCard/GigCard.scss
@@ -70,13 +70,13 @@
 
         .price{
             span{
-                color: #999;
+                color: #100e0e;
                 font-size: small;
             }
             h2{
-                color:#555;
+                color:#100e0e;
                 font-size: 18px;
-                font-weight: 40;
+                font-weight: 400;
             }
         }
     }
