--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -1,141 +1,328 @@
+// .navbar {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     background-color: #33026a;
+//     // background-color: #0d084d;
+//     color: white;
+//     position: sticky;
+//     width: 100%;
+//     top: 0;
+//     z-index: 999;
+//     transition: 0.5s all ease;
+
+//     &.active {
+//       color: rgb(253, 248, 250);
+//       background-color: #314f73;
+
+//       hr{
+//         // margin: 50px 0;
+//         height: 0;
+//         border: 1px solid rgb(19, 86, 144);
+//     }
+
+//       button {
+//         background-color: white !important;
+//         color: #1dbf73 !important;
+//         border: 1px solid #1dbf73 !important;
+//       }
+//     }
+
+//     .container {
+//       width: 100%;
+//       display: flex;
+//       align-items: center;
+//       justify-content: space-between;
+//       padding: 20px 20px;
+
+//       .logo {
+//         font-size: 34px;
+//         font-weight: bold;
+
+//         .text {
+//         }
+
+//         .dot {
+//           font-weight: bold;
+//           color: #1dbf73;
+//         }
+//       }
+//       .links {
+//         display: flex;
+//         align-items: center;
+//         gap: 24px;
+//         font-family: "Montserrat", sans-serif;
+//         font-weight: 500;
+
+//         span {
+//           white-space: nowrap;
+//         }
+
+//         .user {
+//           display: flex;
+//           align-items: center;
+//           gap: 10px;
+//           cursor: pointer;
+//           position: relative;
+
+//           img {
+//             width: 50px;
+//             height: 50px;
+//             border-radius: 50%;
+//             object-fit: cover;
+//             border:2px solid darkolivegreen;
+//             padding: 5px;
+//             // background: #ebe9e9;
+//             background: #d7d813;
+//             // color: #e7ede9;
+//           }
+
+//           .options {
+//             position: absolute;
+//             top: 50px;
+//             right: 0;
+//             padding: 20px;
+//             background-color: white;
+//             border-radius: 10px;
+//             z-index: 999;
+//             border: 1px solid lightgrey;
+//             display: flex;
+//             flex-direction: column;
+//             gap: 10px;
+//             width: 200px;
+//             font-weight: 300;
+//             color: gray;
+//           }
+//         }
+
+//         button {
+//           color: white;
+//           padding: 10px 20px;
+//           border-radius: 5px;
+//           border: 1px solid white;
+//           background-color: transparent;
+//           cursor: pointer;
+
+//           &:hover {
+//             background-color: #1dbf73;
+//             border-color: #1dbf73;
+//           }
+//         }
+
+//         .logout{
+//           color: black;
+//           border:2px solid gray;
+
+//           &:hover {
+//             background-color: #1dbf73;
+//             border-color: #1dbf73;
+//             color: white;
+//           }
+//         }
+//       }
+//     }
+
+//     hr {
+//       width: calc(100% - 2px);
+//       height: 0;
+//       border-top: 0.5px solid #ebe9e9;
+//       border-bottom: 0.5px solid #ebe9e9;
+//     }
+
+//     .menu {
+//       width: 90%;
+//       padding: 10px 0px;
+//       display: flex;
+//       justify-content: space-between;
+//       color: gray;
+//       font-weight: 300;
+//       font-family: "Montserrat", sans-serif;
+//     }
+//   }
+
 .navbar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #33026a;
-    // background-color: #0d084d;
-    color: white;
-    position: sticky;
-    width: 100%;
-    top: 0;
-    z-index: 999;
-    transition: 0.5s all ease;
-    
-    &.active {
-      color: rgb(253, 248, 250);
-      background-color: #314f73;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #33026a;
+	color: white;
+	position: sticky;
+	width: 100%;
+	top: 0;
+	z-index: 999;
+	transition: 0.5s all ease;
 
-      hr{
-        // margin: 50px 0;
-        height: 0;
-        border: 1px solid rgb(19, 86, 144);
-    }
-  
-      button {
-        background-color: white !important;
-        color: #1dbf73 !important;
-        border: 1px solid #1dbf73 !important;
-      }
-    }
-  
-    .container {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 20px 20px;
-  
-      .logo {
-        font-size: 34px;
-        font-weight: bold;
-  
-        .text {
-        }
-  
-        .dot {
-          font-weight: bold;
-          color: #1dbf73;
-        }
-      }
-      .links {
-        display: flex;
-        align-items: center;
-        gap: 24px;
-        font-family: "Montserrat", sans-serif;
-        font-weight: 500;
-  
-        span {
-          white-space: nowrap;
-        }
-  
-        .user {
-          display: flex;
-          align-items: center;
-          gap: 10px;
-          cursor: pointer;
-          position: relative;
-  
-          img {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            object-fit: cover;
-            border:2px solid darkolivegreen;
-            padding: 5px;
-            // background: #ebe9e9;
-            background: #d7d813;
-            // color: #e7ede9;
-          }
-  
-          .options {
-            position: absolute;
-            top: 50px;
-            right: 0;
-            padding: 20px;
-            background-color: white;
-            border-radius: 10px;
-            z-index: 999;
-            border: 1px solid lightgrey;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            width: 200px;
-            font-weight: 300;
-            color: gray;
-          }
-        }
-  
-        button {
-          color: white;
-          padding: 10px 20px;
-          border-radius: 5px;
-          border: 1px solid white;
-          background-color: transparent;
-          cursor: pointer;
-  
-          &:hover {
-            background-color: #1dbf73;
-            border-color: #1dbf73;
-          }
-        }
+	&.active {
+		color: rgb(253, 248, 250);
+		background-color: #314f73;
 
-        .logout{
-          color: black;
-          border:2px solid gray;
+		hr {
+			height: 0;
+			border: 1px solid rgb(19, 86, 144);
+		}
 
-          &:hover {
-            background-color: #1dbf73;
-            border-color: #1dbf73;
-            color: white;
-          }
-        }
-      }
-    }
-  
-    hr {
-      width: calc(100% - 2px);
-      height: 0;
-      border-top: 0.5px solid #ebe9e9;
-      border-bottom: 0.5px solid #ebe9e9;
-    }
-  
-    .menu {
-      width: 90%;
-      padding: 10px 0px;
-      display: flex;
-      justify-content: space-between;
-      color: gray;
-      font-weight: 300;
-      font-family: "Montserrat", sans-serif;
-    }
-  }
+		button {
+			background-color: white !important;
+			color: #1dbf73 !important;
+			border: 1px solid #1dbf73 !important;
+		}
+	}
+
+	.container {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 20px;
+
+		.logo {
+			font-size: 34px;
+			font-weight: bold;
+
+			.dot {
+				color: #1dbf73;
+			}
+		}
+
+		.links {
+			display: flex;
+			align-items: center;
+			gap: 24px;
+			font-family: 'Montserrat', sans-serif;
+			font-weight: 500;
+
+			span {
+				white-space: nowrap;
+			}
+
+			.user {
+				display: flex;
+				align-items: center;
+				gap: 10px;
+				cursor: pointer;
+				position: relative;
+
+				img {
+					width: 50px;
+					height: 50px;
+					border-radius: 50%;
+					object-fit: cover;
+					border: 2px solid darkolivegreen;
+					padding: 5px;
+					background: #d7d813;
+				}
+
+				.options {
+					position: absolute;
+					top: 50px;
+					right: 0;
+					padding: 20px;
+					background-color: white;
+					border-radius: 10px;
+					z-index: 999;
+					border: 1px solid lightgrey;
+					display: flex;
+					flex-direction: column;
+					gap: 10px;
+					width: 200px;
+					font-weight: 300;
+					color: gray;
+				}
+			}
+
+			button {
+				color: white;
+				padding: 10px 20px;
+				border-radius: 5px;
+				border: 1px solid white;
+				background-color: transparent;
+				cursor: pointer;
+
+				&:hover {
+					background-color: #1dbf73;
+					border-color: #1dbf73;
+				}
+			}
+
+			.logout {
+				color: black;
+				border: 2px solid gray;
+
+				&:hover {
+					background-color: #1dbf73;
+					border-color: #1dbf73;
+					color: white;
+				}
+			}
+		}
+	}
+
+	hr {
+		width: calc(100% - 2px);
+		height: 0;
+		border-top: 0.5px solid #ebe9e9;
+		border-bottom: 0.5px solid #ebe9e9;
+	}
+
+	.menu {
+		width: 90%;
+		padding: 10px 0px;
+		display: flex;
+		justify-content: space-between;
+		color: gray;
+		font-weight: 300;
+		font-family: 'Montserrat', sans-serif;
+	}
+
+	/* ----------------- MOBILE RESPONSIVE ----------------- */
+	@media screen and (max-width: 768px) {
+		.container {
+			padding: 15px;
+
+			.links {
+				gap: 10px;
+				display: none; /* hide links on mobile */
+				flex-direction: column;
+				position: absolute;
+				top: 70px;
+				right: 20px;
+				background-color: #33026a;
+				border-radius: 10px;
+				padding: 10px;
+				width: 200px;
+				z-index: 1000;
+
+				&.open {
+					display: flex; /* show when hamburger clicked */
+				}
+			}
+		}
+
+		.hamburger {
+			display: block;
+			cursor: pointer;
+			width: 30px;
+			height: 3px;
+			background-color: white;
+			position: relative;
+
+			&::before,
+			&::after {
+				content: '';
+				position: absolute;
+				width: 30px;
+				height: 3px;
+				background-color: white;
+				transition: 0.3s;
+			}
+
+			&::before {
+				top: -10px;
+			}
+
+			&::after {
+				top: 10px;
+			}
+		}
+	}
+}
