--- a/client/src/components/slides/Slides.scss
+++ b/client/src/components/slides/Slides.scss
@@ -1,24 +1,60 @@
-.slide{
-    display: flex;
-    justify-content: space-evenly;
-    padding: 50px 0;
+.slide {
+	display: flex;
+	justify-content: space-evenly;
+	padding: 50px 0;
 
-    .container{
-        width: 96%;
-        margin: auto;
-        position: relative;
+	.container {
+		width: 96%;
+		margin: auto;
+		position: relative;
 
-        .carousel-prev, .carousel-next{
-            width: 50px;
-            height: 50px;
-            background-color: lightgray;
-            border-radius: 50px;
-            position: absolute;
-            // right: 50;
-            top: 0;
-            bottom: 0;
-            margin: auto;
-        }
-        
-    }
+		.carousel-prev,
+		.carousel-next {
+			width: 50px;
+			height: 50px;
+			background-color: lightgray;
+			border-radius: 50%;
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			margin: auto;
+		}
+	}
+}
+
+@media screen and (max-width: 1024px) {
+	.slide {
+		padding: 30px 0;
+	}
+
+	.slide .container .carousel-prev,
+	.slide .container .carousel-next {
+		width: 40px;
+		height: 40px;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.slide {
+		flex-direction: column;
+		padding: 20px 0;
+	}
+
+	.slide .container .carousel-prev,
+	.slide .container .carousel-next {
+		width: 35px;
+		height: 35px;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.slide {
+		padding: 15px 0;
+	}
+
+	.slide .container .carousel-prev,
+	.slide .container .carousel-next {
+		width: 30px;
+		height: 30px;
+	}
 }
