--- a/client/src/pages/orders/Orders.scss
+++ b/client/src/pages/orders/Orders.scss
@@ -52,5 +52,11 @@
                 }
             }
         }
+    .ordeal{
+        text-align: center;
+        margin-top: 20%;
+        font-size: 38px;
+        color: #3d6990;
+    }
     }
 }
